[project]
name = "asyncio-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Timolai Andrievich"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
